[package]
name = "read-tree"
description = "A read-only tree structure."
version = "0.1.0"

authors = ["Markus <markus@blaumond.net>"]
license = "MIT"
edition = "2018"

documentation = "https://docs.rs/read-tree"
homepage = "https://github.com/markusolt/read-tree"
repository = "https://github.com/markusolt/read-tree"

categories = []
keywords = []
readme = "README.md"

[dependencies]
